2012-02-06  Thanate Dhirasakdanon  <dthanate@users.sourceforge.net>

	* term/luz.trm: Compatibility wrapper functions to support both lua 5.2
	and earlier versions.

2012-02-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Remove error test that could not be reached in the DATA
	case and is incorrect in the FUNC case.

2012-01-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/linux.trm:  Provide a 5x9 raster font for linux.trm
	and svga.trm so that they are not dependent on --with-bitmap-terminals.
	Bug #3481336

2012-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:  Make the font scale handling more like pdf and eps.
	Bugs #3478745 #3480006

2012-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  If there is no key title, there is no need to draw a
	line between the title and the key samples.
	Bug #3478984

2012-01-25  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync with English documentation.

2012-01-22  Tag Release_4_6_rc1

2012-01-17  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* configure.in src/Makefile.am src/qtterminal/Makefile.am
	src/qtterminal/QtGnuplotApplication.cpp
	src/qtterminal/QtGnuplotApplication.h src/qtterminal/QtGnuplotEvent.cpp
	src/qtterminal/QtGnuplotEvent.h src/qtterminal/gnuplot_qt.cpp
	src/qtterminal/qt_term.cpp term/qt.trm: The Qt terminal application is
	executed in a separate executable called gnuplot_qt, started by exec.
	This makes the Qt terminal compatible with OS X.

2012-01-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds):  Store the canvas size used by
	the previous plot in user accessible variables GPVAL_TERM_XSIZE,
	GPVAL_TERM_YSIZE.

2012-01-15  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* src/mouse.c (event_buttonpress): Treat mouse buttons 6/7 as
	left/right scroll events (e.g. from fingers on a touchpad).
